--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+  },
+  "configSchema": {
+    "path": {
+      "order": 1,
+      "type": "string",
+      "default": "~/Dropbox/text",
+      "description": ""
+    }
   }
 }
